review T46, 47